RESOLVED FIXED196784
Regression(r244144) ProcessSwap.ReuseSuspendedProcessLoadHTMLString API test is flaky
https://bugs.webkit.org/show_bug.cgi?id=196784
Summary Regression(r244144) ProcessSwap.ReuseSuspendedProcessLoadHTMLString API test ...
Chris Dumez
Reported 2019-04-10 14:31:27 PDT
ProcessSwap.ReuseSuspendedProcessLoadHTMLString API test is flaky: TestWebKitAPI.ProcessSwap.ReuseSuspendedProcessLoadHTMLString /Volumes/Data/worker/macOS-High-Sierra-Release-Build-EWS/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:2444 Expected equality of these values: applePID Which is: 70197 [webView _webProcessIdentifier] Which is: 70198
Attachments
Patch (4.29 KB, patch)
2019-04-10 16:36 PDT, Chris Dumez
no flags
Patch (1.86 KB, patch)
2019-04-10 16:50 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-04-10 14:46:19 PDT
I have trouble reproducing on my first machine, will try on another machine.
Chris Dumez
Comment 2 2019-04-10 16:11:57 PDT
Flakiness was indeed introduced by r244144.
Chris Dumez
Comment 3 2019-04-10 16:16:03 PDT
I see SuspendedPageProxy::pageEnteredAcceleratedCompositingMode() getting called and it destroys the SuspendedPageProxy because m_suspensionState == SuspensionState::FailedToSuspend. Suspension likely fails because there is no HistoryItem in WebContent process side. I believe failure to suspend is expected here. Depending on how fast SuspendedPageProxy::pageEnteredAcceleratedCompositingMode() gets called, the SuspendedPageProxy may or may not still be there when we need it for the navigation.
Chris Dumez
Comment 4 2019-04-10 16:36:27 PDT
Chris Dumez
Comment 5 2019-04-10 16:50:11 PDT
WebKit Commit Bot
Comment 6 2019-04-10 23:48:25 PDT
Comment on attachment 367178 [details] Patch Clearing flags on attachment: 367178 Committed r244186: <https://trac.webkit.org/changeset/244186>
WebKit Commit Bot
Comment 7 2019-04-10 23:48:26 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8 2019-04-10 23:49:20 PDT
Note You need to log in before you can comment on or make changes to this bug.